/**
 * You can use echo as starter project.
 */
syntax = "proto3";

package persistence;

option go_package="persistencepb";

message Connection {
	string id = 1;
	string name = 2;
	string host = 3;
	string store = 5;
	string user = 6;
	string password = 7;
	int32 port = 8;
}

// Create connection
message CreateConnectionRqst {
	Connection connection = 1;
}

message CreateConnectionRsp {
	bool result = 1;
}

// Delete connection
message DeleteConnectionRqst {
	string id = 1;
}

message DeleteConnectionRsp {
	bool result = 1;
}

service PersistenceService {
	// Create a connection.
	rpc CreateConnection(CreateConnectionRqst) returns (CreateConnectionRsp){};
	
	// Delete a connection.
	rpc DeleteConnection(DeleteConnectionRqst) returns (DeleteConnectionRsp){};
	
}